adjust id for react app
