# routes/contacts.js
@@ -3,13 +3,13 @@ const controller = require('../controllers');
 const router = express.Router();
 
 router.get('/', controller.getData);
-router.get('/:id', controller.getDataById);
+router.get('/:_id', controller.getDataById);
 
 router.post('/', controller.createNewContact);
 
-router.put('/:id', controller.updateById);
+router.put('/:_id', controller.updateById);
 
-router.delete('/:id', controller.deleteById);
+router.delete('/:_id', controller.deleteById);
 router.delete('/deleteMany', controller.deleteManyByName);
 
 module.exports = router;
