# swagger.json
@@ -65,7 +65,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/contacts/{_id}": {
       "get": {
         "description": "",
         "produces": [
@@ -73,7 +73,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "_id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -92,7 +92,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "_id",
             "in": "path",
             "required": true,
             "type": "string"
@@ -126,7 +126,7 @@
         ],
         "parameters": [
           {
-            "name": "id",
+            "name": "_id",
             "in": "path",
             "required": true,
             "type": "string"
